Some text fixes

--- a/Client/Pages/Mutual.razor
+++ b/Client/Pages/Mutual.razor
@@ -1,7 +1,7 @@
 ﻿@page "/mutual/{Item}"
 <h3>Mutual Component</h3>
 <h4>I am Mutual Page</h4>
-<h4>I called ti display info for @Item</h4>
+<h4>I called to display info for @Item</h4>
 
 
 @code {
